# nodalarc

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLA.md  CLAUDE_NODAL.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README-NEW.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  config.mk.example  phase1a-issues.md  pyproject.toml  test-constellationspec.yaml
.github/: CODEOWNERS  REPOSITORY_SETTINGS.md  dependabot.yml  pull_request_template.md
LICENSES/: IBM-Plex-Mono-OFL-1.1.txt  Inter-OFL-1.1.txt
configs/: README.md  nodalpath.yaml  platform.yaml
deploy/: Caddyfile  k3s-setup.sh
docs/: README.md  adding-routing-stacks.md  architecture.md  building-visualization-clients.md  cli-reference.md  configuration-reference.md  developer-guide.md  extending-propagators.md  getting-started.md  node-agent-fork-issue.md  performance-baseline.md  terminal-access.md  time-modes.md  vs-api-reference.md
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
lib/: pyproject.toml
lib/nodal/logging/: __init__.py  _filter.py  _formatter.py  _nats_handler.py
lib/nodalarc/: body_frames.py  catalog_paths.py  constants.py  constellation_loader.py  coverage_insights.py  coverage_preview.py  ephemeris_runtime.py  explain.py  frames.py  frozen.py  geo.py  ground_handover.py  ground_terminals.py  link_metadata.py  link_rule_candidates.py  model_validation.py  nats_channels.py  ome_inputs.py  orbital.py  platform.py  platform_config.py  project_info.py  propagation_kernel.py  propagator.py  resolve_session.py  runtime_naming.py  runtime_support.py  scheduling_checkpoint.py  session_generator.py  session_identity.py  session_validator.py  stack_resolver.py  template_vars.py  tle.py  tracepath_parser.py  vxlan.py  zmq_channels.py
lib/nodalarc/db/: queries.py  schema.py
lib/nodalarc/models/: addressing.py  catalog.py  constellation.py  coverage.py  decision_explanation.py  ephemeris.py  events.py  ground_policy.py  ground_station.py  identity.py  link_decisions.py  link_events.py  link_rules.py  link_state.py  metrics.py  ome_lifecycle.py  path.py  resolved_session.py  routing_stack.py  satellite_type.py  scenario.py  scheduler_ops.py  segment_session.py  segments.py  session.py  terminal_physics.py  vs_api.py
lib/nodalarc/proto/: node_agent.proto  node_agent_pb2.py  node_agent_pb2_grpc.py
lib/nodalarc/substrate/: __init__.py  manifest_contract.py  measurement_contract.py  wiring_status.py
measurement/: convergence_detector.py  convergence_gate.py  flow_manager.py  mi_main.py  probe_client.py  probe_daemon.py
nodalarc_operator/: Dockerfile  __init__.py  __main__.py  handlers.py  session_deployer.py
nodalpath/: Dockerfile  __main__.py  config.py  platform.py
node_agent/: Dockerfile  __main__.py  ground_bridge.py  handlers.py  namespace_ops.py  pid_discovery.py  server.py  wiring.py
ome/: Dockerfile  constellation_loader.py  event_stream.py  main.py  propagator.py  visibility.py
orchestrator/: Dockerfile  discrete_event_dispatcher.py  latency_model.py  link_manager.py  main.py  realtime_dispatcher.py  (+1 more)
(+1459 files in other folders)
