[project]
name = "nodal"
version = "0.1.0"
description = "Nodal Arc - Orbital Network Emulation Lab"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "pyzmq",
    "pyyaml",
    "numpy",
    "sgp4",
    "skyfield",
    "jinja2",
    "fastapi",
    "uvicorn",
    "pyroute2",
    "kubernetes",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
markers = [
    "requires_root: tests that need root/namespace access",
    "integration: integration tests requiring K3s",
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
