[project]
name = "nodal"
version = "0.1.0"
description = "Nodal Arc - Orbital Network Emulation Lab"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "nats-py>=2.7.0",
    "pyyaml",
    "numpy",
    "sgp4",
    "skyfield",
    "jinja2",
    "fastapi",
    "uvicorn",
    "pyroute2",
    "kubernetes",
    "websockets>=16.0",
    "grpcio>=1.74",
    "protobuf>=6.31.1,<7",
    "httpx>=0.28.1",
    "asyncssh>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout>=2.4.0",
    "mypy",
    "ruff>=0.4.4",
    "pre-commit>=3.7.0",
    "kopf>=1.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/nodalarc", "lib/nodal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib", "services"]
timeout = 30
markers = [
    "requires_root: tests that need root/namespace access",
    "integration: integration tests requiring K3s",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.74",
    "pytest-timeout>=2.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "E402", "E741", "E701", "E702", "F841", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"**/tests/**" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
